modify for root user

--- a/chroot/usr/local/toor/.config/xfce4/panel/launcher-10/15016645831.desktop
+++ b/chroot/usr/local/toor/.config/xfce4/panel/launcher-10/15016645831.desktop
@@ -10,4 +10,4 @@ OnlyShowIn=XFCE;
 Name=IntelliJ CE
 Comment=IntelliJ Community Edition
 X-XFCE-Source=file:///usr/share/applications/xfce4-run.desktop
-Path=/home/toor
+Path=/root
